--- a/config.json
+++ b/config.json
@@ -1,9 +1,9 @@
 {
   "locals": {
-    "url": "http://localhost:8080",
-    "name": "The Wintersmith's blog",
-    "owner": "Someone",
-    "description": "Ramblings of an immor(t)al demigod"
+    "root/build": "http://localhost:8080",
+    "name": "FGGC Onitsha",
+    "owner": "Ify",
+    "description": "Alumni gossip"
   },
   "plugins": [
     "./plugins/paginator.coffee"
