--- a/wercker.yml
+++ b/wercker.yml
@@ -17,7 +17,7 @@ build:
           echo "npm version $(npm -v) running"
 deploy:
   steps:
-    - lukevivier/gh-pages@0.2.1:
+    - lukevivier/gh-pages:
         token: $GIT_TOKEN
         basedir: build
         # domain: fggconitsha.com
