--- a/wercker.yml
+++ b/wercker.yml
@@ -11,10 +11,8 @@ build:
     # A custom script step, name value is used in the UI
     # and the code value contains the command that get executed
     - script:
-        name: echo nodejs information
-        code: |
-          echo "node version $(node -v) running"
-          echo "npm version $(npm -v) running"
+       name: wintersmith build
+        code: ./node_modules/.bin/wintersmith build -v -o ./build
 deploy:
   steps:
     - lukevivier/gh-pages:
